adds ngif and routed components

--- a/src/app/searchbar/searchbar.component.html
+++ b/src/app/searchbar/searchbar.component.html
@@ -7,10 +7,12 @@
     <div class="grid">
         <div *ngFor="let movie of movies.results">
             <div class="card">
-                <img src="`https://image.tmdb.org/t/p/w500{{movie.poster_path}}`" class="card-img-top" alt="...">
+                <img src="https://image.tmdb.org/t/p/original{{movie.profile_path}}" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">{{movie.title}}</h5>
-                  <a routerLink="/details/{{movie.title}}" class="btn btn-primary">Details</a>
+                  <h5 class="card-title">{{movie.title}}{{movie.name}}</h5>
+                  <a *ngIf="movie.media_type == 'movie'" routerLink="/movieDetails/{{movie.id}}" class="btn btn-primary">Details</a>
+                  <a *ngIf="movie.media_type == 'person'" routerLink="/actorDetails/{{movie.id}}" class="btn btn-primary">Details</a>
+                  <a *ngIf="movie.media_type == 'tv'" routerLink="/tvDetails/{{movie.id}}" class="btn btn-primary">Details</a>
                 </div>
               </div>
         </div>
