--- a/src/app/movie-list/movie-list.component.html
+++ b/src/app/movie-list/movie-list.component.html
@@ -3,12 +3,12 @@
 <div class="grid">
 <div *ngFor="let movie of popularMovies.results">
     <div class="card">
-        <img src="https://image.tmdb.org/t/p/w500/{{movie.poster_path}}" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">{{movie.title}}</h5>
-          <a routerLink="/movieDetails/{{movie.id}}" class="btn btn-primary">Details</a>
-        </div>
-      </div>
+      <div class="card-body">
+        <a routerLink="/movieDetails/{{movie.id}}">
+          <img src="https://image.tmdb.org/t/p/w300/{{movie.poster_path}}" class="card-img-top" alt="...">
+        </a>
+       </div>
+    </div>
 </div>
 </div>
 
