--- a/src/app/actor-details/actor-details.component.html
+++ b/src/app/actor-details/actor-details.component.html
@@ -1,1 +1,3 @@
-<p>actor-details works!</p>
+<img src="https://image.tmdb.org/t/p/w300{{actor.profile_path}}" class="card-img-top" alt="...">
+<p>{{actor.biography}}</p>
+<p>Birthday: {{actor.birthday}}</p>
