--- a/src/app/actor-details/actor-details.component.html
+++ b/src/app/actor-details/actor-details.component.html
@@ -1,3 +1,16 @@
-<img src="https://image.tmdb.org/t/p/w300{{actor.profile_path}}" class="card-img-top" alt="...">
-<p>{{actor.biography}}</p>
-<p>Birthday: {{actor.birthday}}</p>
+<div id="content">
+    <div id="image">
+        <img src="https://image.tmdb.org/t/p/w300{{actor.profile_path}}" class="card-img-top" alt="...">
+    </div>
+    
+    
+    <div id="overview">
+        <h5>Biography:</h5>
+        <p>{{actor.biography}}</p>
+    </div>
+    
+    <div id="genres">
+        <h5>Birthday:</h5>
+        <p> {{actor.birthday}} </p>
+    </div>
+</div>
