--- a/src/app/movie-details/movie-details.component.html
+++ b/src/app/movie-details/movie-details.component.html
@@ -1,5 +1,16 @@
+<div id="content">
+<div id="image">
 <img src="https://image.tmdb.org/t/p/w300/{{movie.poster_path}}" class="card-img-top" alt="...">
+</div>
 
-<p>{{movie.overview}}</p>
 
-Genres:<p style="display:inline" *ngFor="let genre of movie.genres"> {{genre.name}} </p>
+<div id="overview">
+<h5>Synopsis:</h5>
+    <p >{{movie.overview}}</p>
+</div>
+
+<div id="genres">
+<h5>Genres:</h5>
+<p id="genres" style="display:inline" *ngFor="let genre of movie.genres"> {{genre.name}} </p>
+</div>
+</div>
